# sam-3d-objects

./: demo.py  pyproject.toml  run_demo.sh
doc/: uv_setup.md
sam3d_objects/model/backbone/tdfy_dit/utils/: postprocessing_utils.py
sam3d_objects/pipeline/: inference_pipeline.py
