[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# for git-referenced dependencies
allow-direct-references = true


[project]
name = "sam3d_objects"
version = "0.0.1"
requires-python = ">=3.11, <3.13"
sys_platform = 'linux'

dependencies = [
    "astor==0.8.1",
    "async-timeout==4.0.3",
    "auto_gptq==0.7.1",
    "autoflake==2.3.1",
    "av==12.0.0",
    "bitsandbytes==0.43.0",
    "black==24.3.0",
    "bpy==4.3.0",
    "colorama==0.4.6",
    "conda-pack==0.7.1",
    "crcmod==1.7",
    "dataclasses==0.6",
    "decord==0.6.0",
    "deprecation==2.1.0",
    "easydict==1.13",
    "einops-exts==0.0.4",
    "exceptiongroup==1.2.0",
    "fastavro==1.9.4",
    "fasteners==0.19",
    "flake8==7.0.0",
    "Flask==3.0.3",
    "fqdn==1.5.1",
    "ftfy==6.2.0",
    "fvcore==0.1.5.post20221221",
    "gdown==5.2.0",
    "h5py==3.12.1",
    "hdfs==2.7.3",
    "httplib2==0.22.0",
    "hydra-core==1.3.2",
    "hydra-submitit-launcher==1.2.0",
    "igraph==0.11.8",
    "imath==0.0.2",
    "isoduration==20.11.0",
    "jsonlines==4.0.0",
    "jsonpickle==3.0.4",
    "jsonpointer==2.4",
    "jupyter==1.1.1",
    "librosa==0.10.1",
    "lightning==2.3.3",
    "loguru==0.7.2",
    "mosaicml-streaming==0.7.5",
    "objsize==0.7.0",
    "open3d==0.18.0",
    "opencv-python==4.9.0.80",
    "OpenEXR==3.3.3",
    "optimum==1.18.1",
    "optree==0.14.1",
    "orjson==3.10.0",
    "panda3d-gltf==1.2.1",
    "pdoc3==0.10.0",
    "peft==0.10.0",
    "pip-system-certs==4.0",
    "point-cloud-utils==0.29.5",
    "polyscope==2.3.0",
    "pycocotools==2.0.7",
    "pydot==1.4.2",
    "pymeshfix==0.17.0",
    "pymongo==4.6.3",
    "pyrender==0.1.45",
    "PySocks==1.7.1",
    "pytest==8.1.1",
    "python-pycg==0.9.2",
    "randomname==0.2.1",
    "roma==1.5.1",
    "rootutils==1.0.7",
    "Rtree==1.3.0",
    "sagemaker==2.242.0",
    "scikit-image==0.23.1",
    "sentence-transformers==2.6.1",
    "simplejson==3.19.2",
    "smplx==0.1.28",
    "spconv-cu126==2.3.8",
    "timm==0.9.16",
    "tomli==2.0.1",
    "torch==2.6.0+cu126",
    "torchaudio==2.6.0+cu126",
    # check corresponding table: https://pypi.org/project/torchvision/
    "torchvision==0.21.0+cu126",
    "uri-template==1.3.0",
    "usort==1.0.8.post1",
    "wandb==0.20.0",
    "webcolors==1.13",
    "webdataset==0.2.86",
    "Werkzeug==3.0.6",
    "xatlas==0.0.9",
    "xformers==0.0.29.post3",
    "MoGe @ git+https://github.com/microsoft/MoGe.git@a8c37341bc0325ca99b9d57981cc3bb2bd3e255b",
    "nvidia-cusparselt-cu12>=0.8.1",
    "seaborn>=0.13.2",
    "nvidia-nccl-cu12>=2.28.9",
    "pytorch3d==0.7.8+5043d15pt2.6.0cu126",
    # "pytorch3d @ git+https://github.com/facebookresearch/pytorch3d.git@75ebeeaea0908c5527e7b1e305fbc7681382db47",
    # "flash_attn==2.8.3",
    "numpy==1.26.4",
    "huggingface-hub[cli]<1.0",
    "nvidia-cudnn-cu12>=9.16.0.29",
    "kaolin==0.18.0",
    "gsplat @ git+https://github.com/nerfstudio-project/gsplat.git@2323de5905d5e90e035f792fe65bad0fedd413e7",
    "seaborn==0.13.2",
    "gradio==5.49.0",
    "nvdiffrast @ git+https://github.com/NVlabs/nvdiffrast.git",
]

[dependency-groups]
dev = [
    "pytest",
    "findpydeps",
    "pipdeptree",
    "lovely_tensors",
]

[tool.uv]
# Only resolve for Linux (CUDA packages don't exist for macOS/Windows)
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]



# export PIP_FIND_LINKS="https://nvidia-kaolin.s3.us-east-2.amazonaws.com/torch-2.6.0_cu126.html"
find-links = [
    "https://nvidia-kaolin.s3.us-east-2.amazonaws.com/torch-2.6.0_cu126.html"
]

[tool.uv.extra-build-dependencies]
pytorch3d = ["torch"]
gsplat = ["torch"]
flash_attn = ["torch"]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.ngc.nvidia.com"

[[tool.uv.index]]
name = "personal"
url = "https://miropsota.github.io/torch_packages_builder"
explicit = true

[tool.uv.sources]
pytorch3d = [{index = "personal"}]
torch = [{ index = "pytorch-cu126" }]
torchvision = [{ index = "pytorch-cu126" }]
torchaudio = [{ index = "pytorch-cu126" }]
xformers = [{ index = "pytorch-cu126" }]
